ElfChat 6.0.0 BETA 3,
--------------------------------
- Add ignore feature
- Mobile view on desktop
- Refactor to using bootstrap
- Russian language
- Upgrade system
- Add is_chat_open config option
- Add guest name check
- Refactor hooks system
- Refactor message-color plugin
- Message-color plugin remembers users pick
- Fix magic quotes error
- Fix IP detection
- Fix avatar upload input

ElfChat 6.0.0 BETA 2, 2014-06-25
--------------------------------
- Plugin system
- Theme system
- View hooks system
- Api integration
- Flood control
- Mobile version
- Message color plugin
- Example plugin
- Error pages
- Add mobile config
- Add ban IP detection
- Add "Show online users" in mobile
- Fix FireFox box-sizing
- Fix old avatar removal
- Fix guest login

ElfChat 6.0.0 BETA 1, 2014-04-19
--------------------------------
- Initial release