@@ -10,7 +10,7 @@
             {% endif %}
         {% endblock %}
         {% block style %}
-            <link rel="stylesheet" type="text/css" href="{{ asset('bootstrap/css/bootstrap.min.css') }}">
+            <link rel="stylesheet" type="text/css" href="{{ css('bootstrap/css/bootstrap.min.css') }}">
         {% endblock %}
     {% endblock %}
     <script src="{{ asset('lib/vendor/jquery/jquery.min.js') }}"></script>
