@@ -3,8 +3,8 @@
 {% block style %}
     {{ parent() }}
     <link rel="stylesheet" type="text/css" href="{{ css('css/chat.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ asset('css/theme.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ asset('icons/css/icons.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ css('css/theme.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ css('icons/css/icons.css') }}">
     {% if app.config.get('mobile_enable') %}
         <link rel="stylesheet" type="text/css" media="only screen and (min-width: 320px) and (max-width: 480px)" href="{{ asset('css/mobile.css') }}">
     {% endif %}
