@@ -1,12 +1,10 @@
 body {
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #f5f5f5;
 }
 
 .panel {
     max-width: 350px;
     margin: 0 auto;
     margin-bottom: 50px;
-    border-radius: 10px;
 }
